--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "0.11.18"
+reqwest = {version = "0.10.9", default-features = false, features = ["rustls-tls"]}
